# openshift-virtualization-tests

./: .coderabbit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  JOB_INSIGHT_PROMPT.md  OWNERS  README.md  SIG_TEAMS  TESTS_ORACLE_PROMPT.md  a  conftest.py  pyproject.toml  pytest.ini  renovate.json  test-retest-smoke-v2.md  test-retest-smoke.md  tox.ini
.github/: TEST_VERIFICATION.md  labeler.yml  pull_request_template.md
.github/actions/scripts/breaking-changes-detector/: README.md  __init__.py  action.yml  action_entrypoint.py  ast_analyzer.py  breaking_changes_detector.py  breaking_changes_types.py  config_manager.py  error_handler.py  exceptions.py  git_analyzer.py  git_utils.py  github_actions_utils.py  main.py  pyproject.toml  report_generator.py  requirements.txt  usage_detector.py
.github/scripts/: check_sig_teams_sync.py  coderabbit_workflow.py
.github/workflows/: auto-retest-needs-rebase.yml  check-pr-approval.yml  check-sig-teams-sync.yml  cherrypick-to-4.99.yml  coderabbit-execution-plan-flow.md  coderabbit-retry-on-rate-limit.yml  coderabbit-test-execution-plan.yml  component-builder-publish.yml  component-builder.yml  deploy-docs.yml  fork-pr-cherry-pick.yml  guard-coderabbit-rules.yml  net-utils-builder-staging.yml  net-utils-promote.yml  request-coderabbit-test-instructions.yml  reset-test-ack-on-push.yml  retest-smoke.yml  smoke-tests-label-from-coderabbit.yml  test-ack-command.yml  test-plan-ack.yml  test-verification.yml  unresolve-coderabbit-threads.yml  utilities-unit-tests.yml  validate-coderabbit-schema.yml  verify-bugs-are-open.yml
.rootcoz/: ROOTCOZ_HISTORY_PROMPT.md
containers/utility/: Dockerfile
docs/: ARCHITECTURE_SUPPORT.md  CODE_ORGANIZATION.md  CODING_AND_STYLE_GUIDE.md  CONTAINERIZE_TESTS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  HOW_IT_WORKS.md  INSTALL_AND_UPGRADE.md  MAINTAINER_GUIDELINES.md  MULTIARCH.md  ONBOARDING.md  OWNERS.md  QUARANTINE_GUIDELINES.md  REPO_MAP.md  RUNNING_TESTS.md  SOFTWARE_TEST_DESCRIPTION.md  STYLE_GUIDE.md  WRITING_TESTS.md
docs/flows/: CLOUD_INIT_NETWORKING.md  CONNECTIVITY_TESTING.md  GOLDEN_IMAGE.md  HOT_PLUG.md  LINUX_BRIDGE.md  LOCALNET.md  MIGRATION.md  README.md  SRIOV.md  UDN.md  VM_CREATION.md
docs/site/: code-quality.html  code-quality.md  configuration-constants.html  configuration-constants.md  external-wrappers.html  external-wrappers.md  fixture-strategy.html  fixture-strategy.md  implementing-tests.html  implementing-tests.md  index.html  infrastructure-observability.html  infrastructure-observability.md  llms-full.txt  llms.txt  multi-architecture-testing.html  multi-architecture-testing.md  network-tests.html  network-tests.md  operations-chaos.html  operations-chaos.md  pr-discipline.html  pr-discipline.md  quarantine-process.html  quarantine-process.md  quickstart.html  quickstart.md  resource-lifecycle.html  resource-lifecycle.md  running-tests.html  running-tests.md  scale-upgrades.html  scale-upgrades.md  search-index.json  storage-tests.html  storage-tests.md  test-design-workflow.html  test-design-workflow.md  utilities-reference.html  utilities-reference.md  (+2 more)
libs/infra/: images.py
libs/net/: cluster.py  ip.py  netattachdef.py  nodenetworkconfigurationpolicy.py  traffic_generator.py  vmspec.py
libs/storage/: config.py  mapping.py
libs/vm/: OWNERS  affinity.py  factory.py  oper.py  spec.py  vm.py
scripts/polarion_sync/: README.md  injector.py  jira_linker.py  main.py  polarion_client.py  push_gate.py  scanner.py
scripts/quarantine_stats/: generate_dashboard.py
scripts/reportportal/: tests_common.py
scripts/rp_coverage_gate/: README.md  report.py  rp_checker.py  rp_coverage_gate.py  test_collector.py
scripts/rp_manual_reporter/: README.md  cluster_info.py  collector.py  rp_manual_reporter.py
scripts/rp_utils/: README.md  naming.py  rp_client.py
stats/: generate_dashboard.py
tests/: conftest.py  global_config.py  global_config_amd64.py  global_config_arm64.py  global_config_aro.py  global_config_aws.py  global_config_gcnv.py  global_config_gcp.py  global_config_ibm_spectrum_sc.py  global_config_interop.py  global_config_interop_sno.py  global_config_lvms.py  global_config_multiarch.py  global_config_nfs.py  global_config_oci.py  global_config_rh_it.py  global_config_s390x.py  global_config_sno.py  global_config_sno_hpp.py  global_config_x86.py  global_config_x86_64.py  os_params.py  test_xfail.py  upgrade_params.py  utils.py
utilities/: Makefile  README.md  architecture.py  artifactory.py  bitwarden.py  cluster.py  console.py  constants.py  cpu.py  data_collector.py  data_utils.py  database.py  exceptions.py  guest_support.py  hco.py  infra.py  jira.py  junit_ai_utils.py  logger.py  monitoring.py  must_gather.py  network.py  oadp.py  operator.py  os_utils.py  pyproject.toml  pytest_matrix_utils.py  pytest_utils.py  sanity.py  ssh.py  ssp.py  storage.py  virt.py  vnc_utils.py
utilities/constants/: __init__.py  aaq.py  architecture.py  cluster.py  components.py  cpu_models.py  hco.py  images.py  instance_types.py  monitoring.py  namespaces.py  networking.py  oadp.py  os_matrix.py  pytest.py  storage.py  tekton.py  timeouts.py  virt.py
utilities/tests/: README.md  TODO.md  conftest.py  pytest.ini  test_architecture.py  test_bitwarden.py  test_console.py  test_constants.py  test_data_collector.py  test_database.py  test_exceptions.py  test_hco.py  test_logger.py  test_monitoring.py  test_must_gather.py  test_os_utils.py  test_pytest_matrix_utils.py  test_ssp.py  test_vnc_utils.py
utilities/unittests/: README.md  conftest.py  pytest.ini  test_architecture.py  test_artifactory.py  test_bitwarden.py  test_cluster.py  test_console.py  test_constants.py  test_cpu.py  test_data_collector.py  test_data_utils.py  test_database.py  test_exceptions.py  test_guest_support.py  test_hco.py  test_jira.py  test_logger.py  test_monitoring.py  test_oadp.py  test_operator.py  test_os_utils.py  test_pytest_matrix_utils.py  test_pytest_utils.py  test_sanity.py  test_ssh.py  test_ssp.py  test_storage.py
(+533 files in other folders)
