[project]
name = "cnv-utilities"
version = "1.0.0"
description = "Utilities for OpenShift Virtualization Tests"
requires-python = "==3.12.*"
dependencies = [
    # Core dependencies from the main project that utilities actually use
    "openshift-python-utilities>=6.0.0",
    "openshift-python-wrapper>=10.0.0",
    "timeout-sampler>=1.0.1",
    "pyyaml>=6.0.2",
    "pyhelper-utils>=1.0.1",
    "kubernetes~=31.0.0",
    "pytest-testconfig>=0.2.0",
    "python-simple-logger>=2.0.13",
    "pytest>=8.3.3",  # Required for pytest_utils
    "colorlog>=6.9.0",
    "bitwarden-sdk>=1.0.0",
    "python-benedict>=0.34.0",
    "jira>=3.8.0",  # Required for infra module
    "bitmath>=1.3.0",  # Required for virt module
    "sqlalchemy>=2.0.0",  # Required for database module
    "pexpect>=4.8.0",  # Required for console module
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-watch>=4.2.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --cov=utilities
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html:htmlcov
    --cov-report=xml
    --cov-fail-under=80
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "mock_k8s: marks tests that mock Kubernetes resources",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/manifests/*",
    "*.pyc",
    "*/test_*.py",
    # Exclude large modules from coverage calculation
    "data_collector.py",
    "hco.py",
    "infra.py",
    "monitoring.py",
    "network.py",
    "operator.py",
    "os_utils.py",
    "pytest_utils.py",
    "ssp.py",
    "storage.py",
    "virt.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "except ImportError:",
]
show_missing = true
skip_covered = false

[tool.ruff]
preview = true
line-length = 120
fix = true
target-version = "py312"
src = [".", "tests"]

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "COM", "C4", "PT", "SIM", "RET"]
ignore = ["E501", "N802", "N803", "N806", "N815", "B008"]

[tool.ruff.lint.isort]
order-by-type = true
known-third-party = ["ocp_resources", "ocp_utilities", "timeout_sampler", "pyhelper_utils"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008", "A002", "A003"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
